Use forced-colors media query instead of -ms-high-contrast. Resolves #1712

--- a/Radzen.Blazor/themes/components/blazor/_tabs.scss
+++ b/Radzen.Blazor/themes/components/blazor/_tabs.scss
@@ -275,7 +275,7 @@ $tabs-transition: var(--rz-transition-all) !default;
   }
 }
 
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+@media screen and (forced-colors: active), (forced-colors: none) {
   .rz-tabview-panels {
     flex: auto;
   }
